# NFT_Revealer

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mock_pubMint.json
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: boto.py  main.py  models.py  revealer.py  s3_adapter.py  web3_adapter.py
api/app/metadata/: 12  14  15  16  17  18  19  2  20  22  28  3  31  32  33  38  39  42  46  48  49  5  50  54  56  58  59  61  62  65  66  67  68  7  74  76  77  79  81  82  (+9 more)
metadata/: 1  10  100  11  13  21  23  24  25  26  27  29  30  34  35  36  37  4  40  41  43  44  45  47  51  52  53  55  57  6  60  63  64  69  70  71  72  73  75  78  (+11 more)
nginx/configs/: default.conf
